Refactor hamburger menu markup to use <span> elements for better semantics. Enhance text formatting for improved readability on contact and home pages.

--- a/home.html
+++ b/home.html
@@ -37,9 +37,9 @@
                 <!-- Responsive -->
                 <input type="checkbox" id="checkbox">
                 <label for="checkbox" class="toggle">
-                    <div class="bars" id="bar1"></div>
-                    <div class="bars" id="bar2"></div>
-                    <div class="bars" id="bar3"></div>
+                    <span class="bars" id="bar1"></span>
+                    <span class="bars" id="bar2"></span>
+                    <span class="bars" id="bar3"></span>
                 </label>
                 <nav class="mobile-menu">
                     <ul>
@@ -53,7 +53,7 @@
             </header>
             <div class="txt">
                 <span>
-                    Viví, explora y disfruta de lo mágico de Río de Janeiro
+                    Viví, explora y disfruta de lo <em>mágico</em> de <strong>Río de Janeiro</strong>
                 </span>
             </div>
         </div>
@@ -62,20 +62,21 @@
     <section id="porQue">
         <div class="container">
             <div class="txt">
-                <h2>¿Por qué Río de Janeiro?</h2>
-                <p>Río de Janeiro no es solo una ciudad, es una
-                    forma de sentir la vida. Es música en las calles,
-                    calor humano en cada sonrisa y paisajes que
+                <h2>¿Por qué <strong>Río de Janeiro</strong>?</h2>
+                <p><strong>Río de Janeiro</strong> no es solo una ciudad, es una
+                    forma de sentir la vida. Es <em>música en las calles</em>,
+                    <em>calor humano en cada sonrisa</em> y paisajes que
                     te dejan sin aliento. Acá, la naturaleza y
                     la cultura se mezclan en un ritmo
-                    único: el del mar, el samba y el corazón.</p>
-                <p>Venir a Río no es hacer turismo, es sumergirse
+                    único: el del mar, el <em>samba</em> y el corazón.
+                </p>
+                <p>Venir a <strong>Río</strong> no es hacer turismo, es sumergirse
                     en una forma distinta de vivir. Es despertarse
-                    con vistas al Pan de Azúcar, perder la noción
-                    del tiempo en Ipanema y cerrar el día bailando
+                    con vistas al <strong>Pan de Azúcar</strong>, perder la noción
+                    del tiempo en <strong>Ipanema</strong> y cerrar el día bailando
                     al ritmo del carnaval, incluso si no es febrero.
                     Es probar sabores nuevos, escuchar historias
-                    en las favelas turísticas y sentir que cada
+                    en las <abbr title="Barrios populares de Brasil">favelas</abbr> turísticas y sentir que cada
                     momento tiene algo que celebrar.</p>
             </div>
             <figure class="img">
