--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -34,9 +34,9 @@
             <!-- Responsive -->
             <input type="checkbox" id="checkbox">
             <label for="checkbox" class="toggle">
-                <div class="bars" id="bar1"></div>
-                <div class="bars" id="bar2"></div>
-                <div class="bars" id="bar3"></div>
+                <span class="bars" id="bar1"></span>
+                <span class="bars" id="bar2"></span>
+                <span class="bars" id="bar3"></span>
             </label>
             <nav class="mobile-menu">
                 <ul>
@@ -54,13 +54,15 @@
         <section id="cristo">
             <div class="txt">
                 <h2>Cristo Redentor</h2>
-                <p>El Cristo Redentor es uno de los símbolos más representativos de Brasil y una de las siete maravillas
-                    del mundo moderno. Inaugurado en 1931, esta imponente estatua de 30 metros de altura representa a
-                    Jesucristo con los brazos abiertos como un gesto de paz y acogida. Se encuentra en la cima del cerro
-                    Corcovado, dentro del Parque Nacional de Tijuca, a 710 metros sobre el nivel del mar. Desde su base,
-                    los visitantes pueden disfrutar de una vista panorámica de 360° de Río de Janeiro, incluyendo las
-                    playas de Ipanema, Copacabana y el Pan de Azúcar. De noche, el Cristo es iluminado, creando una
-                    imagen majestuosa que domina el horizonte carioca.</p>
+                <p><strong>El Cristo Redentor</strong> es uno de los <em>símbolos más representativos de Brasil</em> y
+                    una de las <strong>siete maravillas del mundo moderno</strong>. Inaugurado en 1931, esta
+                    <em>imponente estatua</em> de 30 metros de altura representa a Jesucristo con los brazos abiertos
+                    como un gesto de paz y acogida. Se encuentra en la cima del cerro Corcovado, dentro del <abbr
+                        title="Parque Nacional de Tijuca">PNT</abbr>, a 710 metros sobre el nivel del mar. Desde su
+                    base, los visitantes pueden disfrutar de una <strong>vista panorámica de 360°</strong> de Río de
+                    Janeiro, incluyendo las playas de Ipanema, Copacabana y el Pan de Azúcar. De noche, el Cristo es
+                    iluminado, creando una imagen majestuosa que domina el horizonte carioca.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/cristo-redentor.webp" alt="Imagen de Cristo Redentor">
@@ -70,12 +72,14 @@
         <section id="tijuca">
             <div class="txt">
                 <h2>Parque Nacional Tijuca</h2>
-                <p>Con más de 3.900 hectáreas, el Parque Nacional Tijuca es considerado el bosque urbano replantado más
-                    grande del mundo. Se trata de un ecosistema de Mata Atlántica que ofrece una experiencia única para
-                    los amantes de la naturaleza. El parque alberga cascadas como la Taunay, fauna nativa, grutas y
-                    picos como el Pico da Tijuca, ideal para senderismo. Esta zona fue reforestada en el siglo XIX para
-                    proteger las fuentes de agua que abastecían a la ciudad. Además, cuenta con varios miradores y es
-                    hogar de sitios turísticos importantes como el Cristo Redentor y la Vista Chinesa.</p>
+                <p>Con más de 3.900 hectáreas, el <strong>Parque Nacional Tijuca</strong> es considerado el <em>bosque
+                        urbano replantado más grande del mundo</em>. Se trata de un ecosistema de Mata Atlántica que
+                    ofrece una experiencia única para los <strong>amantes de la naturaleza</strong>. El parque alberga
+                    cascadas como la Taunay, fauna nativa, grutas y picos como el Pico da Tijuca, ideal para senderismo.
+                    Esta zona fue reforestada en el siglo XIX para proteger las fuentes de agua que abastecían a la
+                    ciudad. Además, cuenta con varios miradores y es hogar de sitios turísticos importantes como el
+                    <abbr title="Cristo Redentor">CR</abbr> y la <abbr title="Vista Chinesa">VC</abbr>.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/parque-nacional-tijuca.webp" alt="Imagen de Parque Nacional Tijuca">
@@ -85,13 +89,15 @@
         <section id="amanha">
             <div class="txt">
                 <h2>Museo do Amanhã</h2>
-                <p>El Museo del Mañana es un espacio interactivo dedicado a la ciencia y la sostenibilidad. Su edificio,
-                    diseñado por el arquitecto Santiago Calatrava, se ha convertido en un ícono de la arquitectura
-                    moderna en Río. Inaugurado en 2015, propone una reflexión sobre el futuro del planeta a través de
-                    experiencias sensoriales, exposiciones multimedia e instalaciones educativas. El museo aborda temas
-                    como el cambio climático, la biodiversidad y la tecnología desde una perspectiva humanista y
-                    crítica. Su ubicación en la renovada zona portuaria lo convierte en una parada ideal para quienes
-                    disfrutan de la ciencia, el arte y el urbanismo.</p>
+                <p>El <strong>Museo del Mañana</strong> es un <em>espacio interactivo</em> dedicado a la ciencia y la
+                    sostenibilidad. Su edificio, diseñado por el arquitecto <abbr title="Santiago Calatrava Valls">S.
+                        Calatrava</abbr>, se ha convertido en un <strong>icono de la arquitectura moderna</strong> en
+                    Río. Inaugurado en 2015, propone una reflexión sobre el futuro del planeta a través de experiencias
+                    sensoriales, exposiciones multimedia e instalaciones educativas. El museo aborda temas como el
+                    <strong>cambio climático</strong>, la biodiversidad y la tecnología desde una perspectiva humanista
+                    y crítica. Su ubicación en la renovada zona portuaria lo convierte en una parada ideal para quienes
+                    disfrutan de la ciencia, el arte y el urbanismo.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/museo-do-amanhã.webp" alt="Imagen de Museo do Amanhã">
@@ -101,13 +107,15 @@
         <section id="pao">
             <div class="txt">
                 <h2>Pan de Azúcar</h2>
-                <p>El Pan de Azúcar, o "Pão de Açúcar" en portugués, es una formación rocosa que se eleva 396 metros
-                    sobre el nivel del mar en la entrada de la Bahía de Guanabara. Su nombre proviene de la época
-                    colonial, cuando los portugueses moldeaban el azúcar en formas cónicas similares. Se puede acceder
-                    mediante un famoso teleférico que parte desde la estación de Praia Vermelha y hace una parada
-                    intermedia en el Morro da Urca. Desde la cima, se obtiene una de las vistas más espectaculares de la
-                    ciudad, especialmente al atardecer. Es un sitio imperdible para turistas, fotógrafos y amantes del
-                    paisaje.</p>
+                <p>El <strong>Pan de Azúcar</strong>, o <em>Pão de Açúcar</em> en portugués, es una <abbr
+                        title="formación rocosa icónica">formación natural</abbr> que se eleva 396 metros sobre el nivel
+                    del mar en la entrada de la Bahía de Guanabara. Su nombre proviene de la época colonial, cuando los
+                    portugueses moldeaban el azúcar en formas cónicas similares. Se puede acceder mediante un famoso
+                    <strong>teleférico</strong> que parte desde la estación de Praia Vermelha y hace una parada
+                    intermedia en el Morro da Urca. Desde la cima, se obtiene una de las <em>vistas más espectaculares
+                        de la ciudad</em>, especialmente al atardecer. Es un sitio imperdible para turistas, fotógrafos
+                    y amantes del paisaje.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/pan-de-azúcar.webp" alt="Imagen de Pan de Azúcar">
@@ -117,13 +125,13 @@
         <section id="lage">
             <div class="txt">
                 <h2>Parque Lage</h2>
-                <p>Ubicado al pie del Corcovado, el Parque Lage es un oasis natural con un rico valor histórico y
-                    cultural. El parque rodea una mansión del siglo XIX que hoy alberga la Escola de Artes Visuais
-                    (EAV). Su arquitectura de estilo ecléctico y su patio central con piscina se han convertido en
-                    escenarios populares para sesiones de fotos y videoclips. Entre sus senderos se encuentran grutas
-                    artificiales, lagos con peces, jardines ingleses y una cafetería muy frecuentada. Es el lugar ideal
-                    para una caminata tranquila, una clase de dibujo al aire libre o simplemente relajarse rodeado de
-                    vegetación exuberante.</p>
+                <p>Ubicado al pie del Corcovado, el <strong>Parque Lage</strong> es un <em>oasis natural</em> con un
+                    rico valor histórico y cultural. El parque rodea una mansión del siglo XIX que hoy alberga la <abbr
+                        title="Escola de Artes Visuais">EAV</abbr>. Su arquitectura de estilo ecléctico y su patio
+                    central con piscina se han convertido en escenarios populares para sesiones de fotos y videoclips.
+                    Entre sus senderos se encuentran grutas artificiales, lagos con peces, jardines ingleses y una
+                    cafetería muy frecuentada. Es el lugar ideal para una caminata tranquila, una clase de dibujo al
+                    aire libre o simplemente <strong>relajarse rodeado de vegetación exuberante</strong>.</p>
             </div>
             <figure>
                 <img src="../img/image/parque-lage.webp" alt="Imagen de Parque Lage">
@@ -133,12 +141,14 @@
         <section id="chinesa">
             <div class="txt">
                 <h2>Vista Chinesa</h2>
-                <p>La Vista Chinesa es uno de los miradores más bonitos de Río de Janeiro, situado a 380 metros de
-                    altitud en el Parque Nacional Tijuca. Su nombre proviene del pabellón en estilo oriental construido
-                    en honor a los inmigrantes chinos que trabajaron en la plantación de té en el siglo XIX. Desde aquí
-                    se pueden ver lugares emblemáticos como el Cristo Redentor, la Laguna Rodrigo de Freitas, el Pan de
-                    Azúcar y las playas de la zona sur. Es una parada habitual en rutas de ciclistas y fotógrafos que
-                    buscan capturar el amanecer o el atardecer desde este punto estratégico.</p>
+                <p>La <strong>Vista Chinesa</strong> es uno de los <em>miradores más bonitos de Río</em>, situada a 380
+                    metros de altitud en el <abbr title="Parque Nacional de Tijuca">PNT</abbr>. Su nombre proviene del
+                    <em>pabellón de estilo oriental</em> construido en honor a los inmigrantes chinos que trabajaron en
+                    las plantaciones de <abbr title="té">tê</abbr> en el siglo XIX. Desde aquí se pueden ver lugares
+                    embleáticos como el <abbr title="Cristo Redentor">CR</abbr>, la Laguna Rodrigo de Freitas y el Pan
+                    de Azúcar. Es una parada habitual en rutas de ciclistas y fotógrafos que buscan capturar el
+                    <strong>amanecer o atardecer desde este punto estratégico</strong>.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/vista-chinesa.webp" alt="Imagen de Vista Chinesa">
@@ -148,13 +158,15 @@
         <section id="catedral">
             <div class="txt">
                 <h2>Catedral Metropolitana de San Sebastián</h2>
-                <p>Diseñada por el arquitecto Edgar de Oliveira da Fonseca, la Catedral Metropolitana de San Sebastián
-                    es una joya de la arquitectura moderna brasileña. Su forma cónica, inspirada en las pirámides mayas,
-                    y sus 106 metros de altura la hacen destacar en el paisaje urbano. En su interior, cuatro enormes
-                    vitrales multicolores de 64 metros de altura llenan el espacio de luz natural y crean un ambiente
-                    espiritual impresionante. La catedral puede albergar hasta 20.000 personas y es sede de importantes
-                    celebraciones religiosas. Está ubicada en el centro de la ciudad, cerca de otros puntos de interés
-                    como el Arcos da Lapa.</p>
+                <p>Diseñada por el arquitecto <abbr title="Edgar de Oliveira da Fonseca">E.O. Fonseca</abbr>, la
+                    <strong>Catedral Metropolitana</strong> es una joya de la arquitectura moderna brasileña. Su forma
+                    cónica, inspirada en las <abbr title="pirámides mayas">pirámides mesoamericanas</abbr>, y sus 106
+                    metros de altura la hacen destacar en el paisaje urbano. En su interior, cuatro <em>enormes vitrales
+                        multicolores</em> de 64 metros iluminan el espacio, creando un <strong>ambiente espiritual
+                        impresionante</strong>. Puede albergar hasta 20.000 personas y es sede de celebraciones
+                    religiosas importantes. Está ubicada cerca de puntos como los <abbr
+                        title="Arcos da Lapa">AdL</abbr>.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/catedral-metropolitana-de-san-sebastián.webp"
@@ -165,12 +177,13 @@
         <section id="marta">
             <div class="txt">
                 <h2>Mirante Dona Marta</h2>
-                <p>El Mirante Dona Marta es un balcón natural situado a 362 metros sobre el nivel del mar. Desde allí se
-                    obtiene una vista panorámica increíble del Cristo Redentor, el Pan de Azúcar, la Bahía de Guanabara,
-                    el estadio Maracaná y gran parte de la ciudad. Es uno de los miradores preferidos para la fotografía
-                    aérea y ha sido escenario de videoclips, películas y eventos. De fácil acceso en coche, también es
-                    un punto seguro y muy frecuentado por turistas. Es ideal para visitar durante el día, especialmente
-                    en días despejados.</p>
+                <p>El <strong>Mirante Dona Marta</strong> es un <em>balcón natural</em> situado a 362 metros sobre el
+                    nivel del mar. Desde allí se obtiene una <strong>vista panorámica única</strong> del <abbr
+                        title="Cristo Redentor">CR</abbr>, el Pan de Azúcar, la Bahía de Guanabara, el estadio Maracaná
+                    y gran parte de la ciudad. Es uno de los <em>miradores favoritos de los fotógrafos</em> y ha sido
+                    escenario de videoclips, películas y eventos. De fácil acceso en coche, también es un punto seguro y
+                    frecuentado por turistas. Es ideal para visitar durante el día, especialmente en jornadas
+                    despejadas.</p>
             </div>
             <figure>
                 <img src="../img/image/mirante-dona-marta.webp" alt="Imagen de Mirante Dona Marta">
@@ -180,12 +193,13 @@
         <section id="leblon">
             <div class="txt">
                 <h2>Leblon Beach</h2>
-                <p>Leblon es una playa sofisticada y tranquila que continúa la famosa franja costera de Ipanema. Es un
-                    barrio residencial de alto nivel, frecuentado por familias, deportistas y artistas. Su playa ofrece
-                    aguas limpias, buen oleaje y zonas para deportes como vóley y surf. Uno de sus mayores atractivos es
-                    el Mirador do Leblon, que ofrece una vista impresionante del Morro Dois Irmãos al atardecer. Además,
-                    su avenida costera cuenta con bares, restaurantes y ciclovías, ideales para recorrer a pie o en
-                    bici.</p>
+                <p><strong>Leblon</strong> es una playa sofisticada y tranquila que extiende la famosa franja costera de
+                    <abbr title="Ipanema">Ipa</abbr>. Es un barrio residencial de alto nivel, frecuentado por
+                    <em>familias, deportistas y artistas</em>. Su playa ofrece aguas limpias, buen oleaje y zonas para
+                    deportes como vóley y surf. Uno de sus mayores atractivos es el <strong>Mirador do Leblon</strong>,
+                    que ofrece una vista impresionante del Morro Dois Irmãos al atardecer. Además, su avenida costera
+                    cuenta con bares, restaurantes y ciclovías, ideales para recorrer a pie o en bici.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/leblon-beach.webp" alt="Imagen de Leblon Beach">
@@ -195,12 +209,13 @@
         <section id="copacabana">
             <div class="txt">
                 <h2>Praia de Copacabana</h2>
-                <p>La Praia de Copacabana es el corazón turístico de Río de Janeiro. Con más de 4 kilómetros de arena
-                    blanca y un paseo marítimo en forma de olas diseñado por el paisajista Burle Marx, es el lugar ideal
-                    para disfrutar del sol y del ambiente carioca. Aquí se celebran eventos internacionales, como el Año
-                    Nuevo, que atrae a millones de personas. Copacabana también es famosa por sus hoteles históricos,
-                    ferias de artesanía y vida nocturna vibrante. Es una mezcla perfecta entre tradición, modernidad y
-                    alegría tropical.</p>
+                <p>La <strong>Praia de Copacabana</strong> es el <em>corazón turístico de Río de Janeiro</em>. Con más
+                    de 4 kilómetros de arena blanca y un paseo en forma de olas diseñado por el paisajista <abbr
+                        title="Roberto Burle Marx">RBM</abbr>, es el lugar ideal para disfrutar del sol y del
+                    <strong>ambiente carioca</strong>. Aquí se celebran eventos internacionales como el <abbr
+                        title="Año Nuevo">Reveillon</abbr>, que atrae a millones. Copacabana también es famosa por sus
+                    <em>hoteles históricos, ferias de artesanía y vida nocturna</em>. Es una mezcla perfecta entre
+                    <strong>tradición, modernidad y alegría tropical</strong>.</p>
             </div>
             <figure>
                 <img src="../img/image/praia-de-copacabana.webp" alt="Imagen de Praia de Copacabana">
