--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,9 +34,9 @@
             <!-- Responsive -->
             <input type="checkbox" id="checkbox">
             <label for="checkbox" class="toggle">
-                <div class="bars" id="bar1"></div>
-                <div class="bars" id="bar2"></div>
-                <div class="bars" id="bar3"></div>
+                <span class="bars" id="bar1"></span>
+                <span class="bars" id="bar2"></span>
+                <span class="bars" id="bar3"></span>
             </label>
             <nav class="mobile-menu">
                 <ul>
@@ -54,18 +54,21 @@
         <main>
             <div class="txt">
                 <h2>Contacto</h2>
-                <p>Si tienes alguna pregunta o necesitas más información sobre nuestros tours, atracciones recomendadas
-                    o consejos para tu viaje a Rio de Janeiro, no dudes en ponerte en contacto con nosotros. Nuestro
-                    equipo estará encantado de ayudarte a planificar una experiencia inolvidable en la Ciudad
-                    Maravillosa.</p>
+                <p>Si tienes alguna pregunta o necesitas más información sobre nuestros <em>tours</em>, atracciones
+                    recomendadas
+                    o consejos para tu viaje a <strong>Rio de Janeiro</strong>, no dudes en ponerte en contacto con
+                    nosotros. Nuestro
+                    equipo estará encantado de ayudarte a planificar una experiencia inolvidable en la <strong>Ciudad
+                        Maravillosa</strong>.</p>
 
-                <p>También puedes contactarnos si quieres compartir tu experiencia o sugerir nuevas atracciones para
+                <p>También puedes contactarnos si quieres compartir tu <em>experiencia</em> o sugerir nuevas atracciones
+                    para
                     incluir en nuestra guía. ¡Valoramos tus comentarios!</p>
 
-                <p>Te responderemos en menos de 24hs. Nuestro equipo de <abbr title="Atención al Cliente">AC</abbr> está
-                    disponible de lunes a viernes.</p>
-                <p><strong>¡Tu opinión cuenta!</strong> Ayudanos a mejorar nuestra guía de Río.</p>
-
+                <p>Te responderemos en menos de <strong>24hs</strong>. Nuestro equipo de <abbr
+                        title="Atención al Cliente">AC</abbr> está
+                    disponible de <em>lunes a viernes</em>.</p>
+                <p><strong>¡Tu opinión cuenta!</strong> Ayudanos a mejorar nuestra guía de <strong>Río</strong>.</p>
             </div>
             <div class="container-form">
                 <form action="#" method="post">
