Add blog page and update navigation links to include it

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -27,7 +27,7 @@
                     <li><a href="#" class="active">Atracciones</a></li>
                     <li><a href="#">Dónde comer</a></li>
                     <li><a href="#">Dónde alojarse</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
