--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
                         <li><a href="pages/atracciones.html">Atracciones</a></li>
                         <li><a href="#">Dónde comer</a></li>
                         <li><a href="#">Dónde alojarse</a></li>
-                        <li><a href="#">Blog</a></li>
+                        <li><a href="pages/blog.html">Blog</a></li>
                         <li><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
