--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -27,7 +27,7 @@
                     <li><a href="atracciones.html">Atracciones</a></li>
                     <li><a href="#">Dónde comer</a></li>
                     <li><a href="#">Dónde alojarse</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
