Add student information section to multiple pages and update styles for better presentation

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -215,7 +215,8 @@
                     <strong>ambiente carioca</strong>. Aquí se celebran eventos internacionales como el <abbr
                         title="Año Nuevo">Reveillon</abbr>, que atrae a millones. Copacabana también es famosa por sus
                     <em>hoteles históricos, ferias de artesanía y vida nocturna</em>. Es una mezcla perfecta entre
-                    <strong>tradición, modernidad y alegría tropical</strong>.</p>
+                    <strong>tradición, modernidad y alegría tropical</strong>.
+                </p>
             </div>
             <figure>
                 <img src="../img/image/praia-de-copacabana.webp" alt="Imagen de Praia de Copacabana">
@@ -237,6 +238,17 @@
                     <img src="../img/icon/x.svg" alt="Icono de X(ex Twiter)">
                     <img src="../img/icon/tiktok.svg" alt="Icono de TikTok">
                 </figure>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="info-alumno">
+                <ul>
+                    <li>Apellido y nombre: Tito Valentín</li>
+                    <li>Nombre de la materia: Maquetado y desarrollo web</li>
+                    <li>Docente a cargo: Carlos Ferrer</li>
+                    <li>AVISO: entrega para un TP de primer cuatrimestre de la Escuela Da Vinci con el año actual.</li>
+                </ul>
             </div>
         </div>
 
