--- a/pages/blog.html
+++ b/pages/blog.html
@@ -66,6 +66,17 @@
                 </figure>
             </div>
         </div>
+        
+        <div class="container">
+            <div class="info-alumno">
+                <ul>
+                    <li>Apellido y nombre: Tito Valentín</li>
+                    <li>Nombre de la materia: Maquetado y desarrollo web</li>
+                    <li>Docente a cargo: Carlos Ferrer</li>
+                    <li>AVISO: entrega para un TP de primer cuatrimestre de la Escuela Da Vinci con el año actual.</li>
+                </ul>
+            </div>
+        </div>
 
         <span class="copyright">© 2025 All Rights Reserved Developed by in.</span>
     </footer>
