Add navigation menu for attractions section and update styles for improved layout

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -51,6 +51,21 @@
     </div>
 
     <div class="container-corto">
+        <nav>
+            <ul>
+                <li><a href="#cristo">Cristo Redentor</a></li>
+                <li><a href="#tijuca">Parque Nacional Tijuca</a></li>
+                <li><a href="#amanha">Museo do Amanhã</a></li>
+                <li><a href="#pao">Pan de Azúcar</a></li>
+                <li><a href="#lage">Parque Lage</a></li>
+                <li><a href="#chinesa">Vista Chinesa</a></li>
+                <li><a href="#catedral">Catedral de San Sebastián</a></li>
+                <li><a href="#marta">Mirante Dona Marta</a></li>
+                <li><a href="#leblon">Leblon Beach</a></li>
+                <li><a href="#copacabana">Praia de Copacabana</a></li>
+            </ul>
+        </nav>
+
         <section id="cristo">
             <div class="txt">
                 <h2>Cristo Redentor</h2>
