Actualizar enlaces de navegación para la sección de atracciones

--- a/pages/atracciones.html
+++ b/pages/atracciones.html
@@ -24,7 +24,7 @@
             </a>
             <nav class="desktop-menu">
                 <ul>
-                    <li><a href="#" class="active">Atracciones</a></li>
+                    <li><a href="atracciones.html">Atracciones</a></li>
                     <li><a href="#">Dónde comer</a></li>
                     <li><a href="#">Dónde alojarse</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -40,7 +40,7 @@
             </label>
             <nav class="mobile-menu">
                 <ul>
-                    <li style="--i:1"><a href="#" class="active">Atracciones</a></li>
+                    <li style="--i:1"><a href="atracciones.html">Atracciones</a></li>
                     <li style="--i:2"><a href="#">Dónde comer</a></li>
                     <li style="--i:3"><a href="#">Dónde alojarse</a></li>
                     <li style="--i:4"><a href="#">Blog</a></li>
