--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="presentacion">
         <div class="container-extenso">
             <header>
-                <a href="/home.html">
+                <a href="/index.html">
                     <figure>
                         <img src="img/mascara.png" alt="Logo de RioMagico">
                     </figure>
@@ -122,7 +122,7 @@
 
     <footer>
         <div class="container">
-            <a href="/home.html">
+            <a href="/index.html">
                 <figure>
                     <img src="img/mascara.png" alt="Logo de RioMagico">
                 </figure>
