--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container-extenso">
         <header>
-            <a href="../home.html">
+            <a href="../index.html">
                 <figure>
                     <img src="../img/mascara.png" alt="Logo de RioMagico">
                 </figure>
