Actualizar formulario de contacto y agregar página de confirmación de envío

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,7 +71,8 @@
                 <p><strong>¡Tu opinión cuenta!</strong> Ayudanos a mejorar nuestra guía de <strong>Río</strong>.</p>
             </div>
             <div class="container-form">
-                <form action="#" method="post">
+                <!-- In contacto.html, update the form element: -->
+                <form action="form_enviado.html" method="get">
                     <div class="container-nombre-email">
                         <div class="container-nombre">
                             <label for="nombre">Nombre:</label>
