Actualizar enlaces de navegación para "Dónde comer" y "Dónde alojarse" en todas las páginas

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <nav class="desktop-menu">
                     <ul>
                         <li><a href="pages/atracciones.html">Atracciones</a></li>
-                        <li><a href="#">Dónde comer</a></li>
-                        <li><a href="#">Dónde alojarse</a></li>
+                        <li><a href="pages/donde_comer.html">Dónde comer</a></li>
+                        <li><a href="pages/donde_alojarse.html">Dónde alojarse</a></li>
                         <li><a href="pages/blog.html">Blog</a></li>
                         <li><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
@@ -44,9 +44,9 @@
                 <nav class="mobile-menu">
                     <ul>
                         <li style="--i:1"><a href="pages/atracciones.html">Atracciones</a></li>
-                        <li style="--i:2"><a href="#">Dónde comer</a></li>
-                        <li style="--i:3"><a href="#">Dónde alojarse</a></li>
-                        <li style="--i:4"><a href="#">Blog</a></li>
+                        <li style="--i:2"><a href="pages/donde_comer.html">Dónde comer</a></li>
+                        <li style="--i:3"><a href="pages/donde_alojarse.html">Dónde alojarse</a></li>
+                        <li style="--i:4"><a href="pages/blog.html">Blog</a></li>
                         <li style="--i:5"><a href="pages/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
