--- a/pages/blog.html
+++ b/pages/blog.html
@@ -27,8 +27,8 @@
             <nav class="desktop-menu">
                 <ul>
                     <li><a href="atracciones.html">Atracciones</a></li>
-                    <li><a href="#">Dónde comer</a></li>
-                    <li><a href="#">Dónde alojarse</a></li>
+                    <li><a href="donde_comer.html">Dónde comer</a></li>
+                    <li><a href="donde_alojarse.html">Dónde alojarse</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
@@ -43,8 +43,8 @@
             <nav class="mobile-menu">
                 <ul>
                     <li style="--i:1"><a href="atracciones.html">Atracciones</a></li>
-                    <li style="--i:2"><a href="#">Dónde comer</a></li>
-                    <li style="--i:3"><a href="#">Dónde alojarse</a></li>
+                    <li style="--i:2"><a href="donde_comer.html">Dónde comer</a></li>
+                    <li style="--i:3"><a href="donde_alojarse.html">Dónde alojarse</a></li>
                     <li style="--i:4"><a href="blog.html">Blog</a></li>
                     <li style="--i:5"><a href="contacto.html">Contacto</a></li>
                 </ul>
